just some more notebooks

--- a/paper1/reviews/surface-wBSW.ipynb
+++ b/paper1/reviews/surface-wBSW.ipynb
@@ -58,7 +58,7 @@
     "land_color = '#a9a7a2'\n",
     "\n",
     "# results to plot:\n",
-    "folder_ref  = f'/data/brogalla/run_storage/Mn-reference-202110/'\n",
+    "folder_ref  = f'/data/brogalla/run_storage/Mn-reference-202204/'\n",
     "folder_wBSW = f'/data/brogalla/run_storage/Mn-wBSW-202204/'"
    ]
   },
@@ -72,12 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f09eb862-84ac-49b7-825c-ebabf3b77ec0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_ref    = nc.Dataset(f'{folder_ref}ANHA12_ref-spin-up3_20211012/ANHA12_EXH006_5d_20020101_20021231_ptrc_T_20020101-20020105.nc')\n",
+    "model_ref    = nc.Dataset(f'{folder_ref}ANHA12_ref-spin-up0_20220422/ANHA12_EXH006_5d_20020101_20021231_ptrc_T_20020101-20020105.nc')\n",
     "lon_model    = np.array(model_ref.variables['nav_lon'])\n",
     "lat_model    = np.array(model_ref.variables['nav_lat'])\n",
     "depths_model = np.array(model_ref.variables['deptht'])"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "191fb746-da1f-46f2-95ab-263f0659582d",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a243860e-b8a6-45f1-a6c7-e1263871be5f",
    "metadata": {},
    "outputs": [],
@@ -125,21 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "193a6193-3bf8-402c-9ba3-dcda543e1762",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mn model run results:\n",
-    "fref  = xr.open_dataset(f'{folder_ref}ANHA12_ref-{year}_20211012/ANHA12_EXH006_{year}_monthly.nc')\n",
-    "fwBSW = xr.open_dataset(f'{folder_wBSW}ANHA12_Mn-wBSW-{year}_20220407/ANHA12_EXH006_{year}_monthly.nc')\n",
+    "# fref  = xr.open_dataset(f'{folder_ref}ANHA12_ref-{year}_20211012/ANHA12_EXH006_{year}_monthly.nc')\n",
+    "# fwBSW = xr.open_dataset(f'{folder_wBSW}ANHA12_Mn-wBSW-{year}_20220407/ANHA12_EXH006_{year}_monthly.nc')\n",
+    "fref  = xr.open_dataset(f'{folder_ref}ANHA12_ref-spin-up1_20220422/ANHA12_EXH006_{year}_monthly.nc')\n",
+    "fwBSW = xr.open_dataset(f'{folder_wBSW}ANHA12_wBSW-spin-up1_20220422/ANHA12_EXH006_{year}_monthly.nc')\n",
     "dMn_ref  = fref['dissolmn'].values[:,0,:,:,:]*1e9\n",
     "dMn_wBSW = fwBSW['dissolmn'].values[:,0,:,:,:]*1e9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b9341bf8-dd4f-4ede-9ef2-5f37eeaecedd",
    "metadata": {},
    "outputs": [],
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "324da950-df87-442d-be88-231a78cc44ac",
    "metadata": {},
    "outputs": [],
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7a79aa6e-9f27-4add-84b3-89ae4f34123e",
    "metadata": {},
    "outputs": [],
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "84c3c8e0-f46f-4e8e-8776-6d46609f6b6f",
    "metadata": {},
    "outputs": [],
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c44b8c1a-eaa9-418e-b5f0-503b9c82089e",
    "metadata": {},
    "outputs": [],
@@ -227,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "4d7ef74c-1f11-4945-9ef2-9a043ce76eaf",
    "metadata": {},
    "outputs": [],
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "0cb4ce0e-9c0b-433b-8064-8ac805676486",
    "metadata": {},
    "outputs": [],
@@ -320,6 +322,19 @@
    "metadata": {},
    "source": [
     "#### Figures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac80e631-8e27-4f21-83bc-b76af8683825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "month=8\n",
+    "mn_model_ref = calculate_depth_weighted(dMn_ref[month,:,:,:])\n",
+    "mn_model_exp = calculate_depth_weighted(dMn_wBSW[month,:,:,:])\n",
+    "plot_slice(mn_model_ref, mn_model_exp, vmax1=10, vmax2=3, savefig=False)"
    ]
   },
   {
@@ -353,7 +368,7 @@
     "month=8\n",
     "mn_model_ref = calculate_depth_weighted(dMn_ref[month,:,:,:])\n",
     "mn_model_exp = calculate_depth_weighted(dMn_wBSW[month,:,:,:])\n",
-    "plot_slice(mn_model_ref, mn_model_exp, vmax1=10, vmax2=3, savefig=True)"
+    "plot_slice(mn_model_ref, mn_model_exp, vmax1=10, vmax2=3, savefig=False)"
    ]
   },
   {
