tidied up notebooks a bit; needs more work

--- a/paper2/D8-time-lag.ipynb
+++ b/paper2/D8-time-lag.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lag time in river contribution"
+    "# Discussion Figure ---lLag time in river contribution"
    ]
   },
   {
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,26 +1080,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'#995224'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "color_cont_dark"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1120,7 @@
     "fig.text(0.127, 0.84, 'a)', fontsize=8, weight='bold');\n",
     "fig.text(0.55 , 0.84, 'b)', fontsize=8, weight='bold');\n",
     "    \n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers/D2-arrival-time.jpg', bbox_inches='tight', dpi=300)"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202206/D2-arrival-time.jpg', bbox_inches='tight', dpi=300)"
    ]
   },
   {
