--- a/paper2/R2a-spatial-variation.ipynb
+++ b/paper2/R2a-spatial-variation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spatial variation in continental vs. glacial river contributions "
+    "# Results Figure --- spatial variation in continental vs. glacial river contributions "
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Parameters:"
+    "#### Parameters:"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Load files:"
+    "#### Load files:"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Functions:"
+    "#### Functions:"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Calculations:"
+    "#### Calculations:"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Figures"
+    "#### Figures"
    ]
   },
   {
@@ -313,7 +313,7 @@
     "    CBar.ax.zorder = 7\n",
     "    CBar.ax.set_yticklabels([f'{i:.1f}%' for i in CBar.get_ticks()])\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers/R1-Parry.png', bbox_inches='tight', dpi=300)"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202206/R2-Parry.jpg', bbox_inches='tight', dpi=300)"
    ]
   },
   {
@@ -383,7 +383,7 @@
     "    CBar.ax.zorder = 7\n",
     "    CBar.ax.set_yticklabels([f'{i:.1f}%' for i in CBar.get_ticks()])\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers/R1-Nares.png', bbox_inches='tight', dpi=300)"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202206/R2-Nares.jpg', bbox_inches='tight', dpi=300)"
    ]
   },
   {
