--- a/paper2/R3,4-monthly-variation.ipynb
+++ b/paper2/R3,4-monthly-variation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spatial variation in continental vs. glacial river contributions "
+    "# Results figure --- seasonal spatial variation in continental and glacial river contributions "
    ]
   },
   {
@@ -19,7 +19,6 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import ListedColormap\n",
-    "from matplotlib.patches import Rectangle\n",
     "import cmocean\n",
     "\n",
     "%matplotlib inline"
@@ -27,9 +26,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "##### Parameters:"
+    "#### Parameters:"
    ]
   },
   {
@@ -83,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Load files:"
+    "#### Load files:"
    ]
   },
   {
@@ -122,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Functions:"
+    "#### Functions:"
    ]
   },
   {
@@ -186,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Calculations:"
+    "#### Calculations:"
    ]
   },
   {
@@ -236,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Figures"
+    "#### Figures"
    ]
   },
   {
@@ -327,7 +328,7 @@
     "fig.text(0.515, 0.42, 'g)', fontsize=8, weight='bold');\n",
     "fig.text(0.76, 0.42, 'h)', fontsize=8, weight='bold');\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers/R3-seasonal-variation.png', bbox_inches='tight', dpi=300)"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202206/R4-seasonal-variation.jpg', bbox_inches='tight', dpi=300)"
    ]
   },
   {
@@ -398,7 +399,7 @@
     "CBar2.ax.tick_params(axis='y', length=0, labelsize=6)\n",
     "CBar2.ax.set_yticklabels([f'{i:.1f}%' for i in CBar2.get_ticks()]);\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers/R3-mean-field.png', bbox_inches='tight', dpi=300)"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202206/R3-mean-field.jpg', bbox_inches='tight', dpi=300)"
    ]
   }
  ],
