Tidied up and fixed weighted ave calculation fig M1, R2

--- a/paper2/M1-river-forcing.ipynb
+++ b/paper2/M1-river-forcing.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Discussion Figure --- visualize river forcing (classification and Mn content)"
+    "# Methods Figure --- visualize river forcing (classification and Mn content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,12 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# River runoff forcing:\n",
-    "rf_file = nc.Dataset('/ocean/brogalla/GEOTRACES/data/runoff/ANHA12_runoff_monthly_combined_Dai_Trenberth_Bamber_y{rf_year}.nc','r')\n",
+    "# ANHA12 river runoff forcing:\n",
+    "rf_file = nc.Dataset(f'/ocean/brogalla/GEOTRACES/data/runoff/ANHA12_runoff_monthly_combined_Dai_Trenberth_Bamber_y{rf_year}.nc','r')\n",
     "model_lons = np.array(rf_file.variables['nav_lon'])\n",
     "model_lats = np.array(rf_file.variables['nav_lat'])\n",
     "model_river= np.array(rf_file.variables['runoff'])\n",
@@ -85,12 +85,16 @@
     "# Place NaNs where there is no runoff\n",
     "rf[rf == 0]       = np.nan\n",
     "model_lons[rf == 0.0] = np.nan\n",
-    "model_lats[rf == 0.0] = np.nan"
+    "model_lats[rf == 0.0] = np.nan\n",
+    "\n",
+    "# Mask for sub-domain:\n",
+    "domain_mask = np.zeros((12,model_lons.shape[0],model_lons.shape[1]))\n",
+    "domain_mask[:,imin:imax,jmin:jmax] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Meshmask:\n",
+    "# ANHA12 grid mesh:\n",
     "mesh       = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mesh1.nc')\n",
     "lon_ANHA12 = np.array(mesh.variables['nav_lon'])\n",
     "lat_ANHA12 = np.array(mesh.variables['nav_lat'])\n",
@@ -121,18 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mask for sub-domain:\n",
-    "domain_mask = np.zeros((12,model_lons.shape[0],model_lons.shape[1]))\n",
-    "domain_mask[:,imin:imax,jmin:jmax] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load seasonal river forcing:\n",
+    "# Load seasonally varying river forcing:\n",
     "dMn_rivers = np.zeros((12, river_class.shape[0], river_class.shape[1]))\n",
     "\n",
     "for month in range(1,13):\n",
@@ -146,32 +139,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalize(variable):\n",
-    "    \n",
-    "    norm_variable = variable/np.amax(variable)\n",
-    "    \n",
-    "    return norm_variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Figure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
