Tidied up rest of results figure notebooks

--- a/paper2/R6-time-series.ipynb
+++ b/paper2/R6-time-series.ipynb
@@ -20,9 +20,7 @@
     "from itertools import compress\n",
     "import datetime as dt\n",
     "import os\n",
-    "import cmocean\n",
-    "import pandas as pd\n",
-    "from matplotlib.ticker import FormatStrFormatter, MultipleLocator, AutoMinorLocator\n",
+    "from matplotlib.ticker import FormatStrFormatter, MultipleLocator\n",
     "import matplotlib.dates as mdates\n",
     "\n",
     "%matplotlib inline"
@@ -37,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +57,12 @@
     "\n",
     "# Years to include:\n",
     "years = [2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, \\\n",
-    "         2016, 2017, 2018, 2019, 2020]"
+    "         2016, 2017, 2018, 2019]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -215,13 +213,13 @@
    "source": [
     "# Array of 5-day file dates\n",
     "dates = np.array([])\n",
-    "for year in range(2002, 2021):\n",
+    "for year in range(2002, 2020):\n",
     "    dates = np.append(dates, file_dates(year))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,14 +261,6 @@
     "    exp_5d_neg = np.sum(exp_flux_neg, axis=(2,3)).flatten()\n",
     "    exp_5d_pos = np.sum(exp_flux_pos, axis=(2,3)).flatten()\n",
     "    \n",
-    "    # Net flux for each 5-day period: positive + negative flux\n",
-    "    ref_5d_net = ref_5d_pos + ref_5d_neg\n",
-    "    exp_5d_net = exp_5d_pos + exp_5d_neg\n",
-    "    \n",
-    "    # Absolute value of flux (i.e. independent of direction)\n",
-    "    exp_5d_abs = exp_5d_pos + np.abs(exp_5d_neg)\n",
-    "    ref_5d_abs = ref_5d_pos + np.abs(ref_5d_neg)\n",
-    "    \n",
     "    if cumulative:\n",
     "        # Cumulative transport in each direction:\n",
     "        cumsum_ref_5d_neg = np.cumsum(ref_5d_neg)\n",
@@ -288,22 +278,21 @@
     "        # Proportion of net transport in experiment above reference:\n",
     "        prop_5d_neg = np.divide(exp_5d_neg - ref_5d_neg, ref_5d_neg)*100*multiple\n",
     "        prop_5d_pos = np.divide(exp_5d_pos - ref_5d_pos, ref_5d_pos)*100*multiple\n",
-    "#         prop_5d_abs = np.divide(exp_5d_abs - ref_5d_abs, ref_5d_abs)*100*multiple\n",
     "        \n",
     "        return prop_5d_neg, prop_5d_pos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/brogalla/miniconda3/envs/julab/lib/python3.6/site-packages/ipykernel_launcher.py:45: RuntimeWarning: invalid value encountered in true_divide\n",
-      "/home/brogalla/miniconda3/envs/julab/lib/python3.6/site-packages/ipykernel_launcher.py:46: RuntimeWarning: invalid value encountered in true_divide\n"
+      "/home/brogalla/miniconda3/envs/julab/lib/python3.6/site-packages/ipykernel_launcher.py:37: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/brogalla/miniconda3/envs/julab/lib/python3.6/site-packages/ipykernel_launcher.py:38: RuntimeWarning: invalid value encountered in true_divide\n"
      ]
     }
    ],
@@ -346,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -444,41 +433,6 @@
     "fig.text(0.569, 0.295, 'f)', fontsize=8, weight='bold');\n",
     "\n",
     "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202206/R6-time-series.jpg', bbox_inches='tight', dpi=300)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What about if instead of providing time series, we calculate the cumulative proportion contribution:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Into Parry Channel: ')\n",
-    "print(f'Clean-ref:  {-100*(np.nansum(Parry_nosed_in)-np.nansum(Parry_ref_in))/np.nansum(Parry_ref_in):.2f}')\n",
-    "print(f'Rivers-ref: {100*(np.nansum(Parry_rivers_in)-np.nansum(Parry_ref_in))/np.nansum(Parry_ref_in):.2f}')\n",
-    "print('Out of Parry Channel: ')\n",
-    "print(f'Clean-ref:  {-100*(np.nansum(Parry_nosed_out)-np.nansum(Parry_ref_out))/np.nansum(Parry_ref_out):.2f}')\n",
-    "print(f'Rivers-ref: {100*(np.nansum(Parry_rivers_out)-np.nansum(Parry_ref_out))/np.nansum(Parry_ref_out):.2f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Into Parry Channel: ')\n",
-    "print(f'Clean-ref:  {-100*(np.nansum(Parry_nosed_in)-np.nansum(Parry_ref_in))/np.nansum(Parry_ref_in):.2f}')\n",
-    "print(f'Rivers-ref: {100*(np.nansum(Parry_rivers_in)-np.nansum(Parry_ref_in))/np.nansum(Parry_ref_in):.2f}')\n",
-    "print('Out of Parry Channel: ')\n",
-    "print(f'Clean-ref:  {-100*(np.v(Parry_nosed_out)-np.v(Parry_ref_out))/np.v(Parry_ref_out):.2f}')\n",
-    "print(f'Rivers-ref: {100*(np.nansum(Parry_rivers_out)-np.nansum(Parry_ref_out))/np.nansum(Parry_ref_out):.2f}')"
    ]
   }
  ],
