Supplementary figs checked and tidied

--- a/paper2/S1-spin-up.ipynb
+++ b/paper2/S1-spin-up.ipynb
@@ -4,21 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assess whether the model is spun up"
+    "# Supplement Figure --- Assess whether the model is spun up"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import netCDF4 as nc\n",
     "import numpy as np\n",
-    "import scipy.stats as scs\n",
     "import matplotlib\n",
-    "from datetime import date\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -32,33 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Domain dimensions:\n",
     "imin, imax = 1479, 2179\n",
     "jmin, jmax = 159, 799\n",
-    "\n",
     "isize = imax - imin\n",
     "jsize = jmax - jmin\n",
     "\n",
+    "# Year to look at:\n",
     "year  = 2002\n",
     "month = 8\n",
     "\n",
+    "# Evaluation station location coordinates:\n",
     "stn_i = np.array([104, 100, 91, 175, 175, 233, 214, 352, 242, 458, 508, 547, 629])\n",
-    "stn_j = np.array([370, 365, 353, 311, 326, 313, 281, 281, 364, 332, 384, 457, 471])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "stn_j = np.array([370, 365, 353, 311, 326, 313, 281, 281, 364, 332, 384, 457, 471])\n",
+    "\n",
+    "# Colours for lines:\n",
     "colors = ['#f9ddd8', '#f2ac9f', '#ea7a65', '#e5593f', '#a03e2c', \\\n",
     "          '#e0dfea', '#b1b0cc', '#646199', '#46436b', \\\n",
     "          '#3d6977', '#5b9db3', '#84bfd2', '#c1dfe8'] # CB\n",
     "\n",
+    "# Station names:\n",
     "name   = ['CAA1', 'CAA2', 'CAA3', 'CAA4', 'CAA5', 'CAA6', 'CAA7', 'CAA8', 'CAA9', \\\n",
     "          'CB1', 'CB2', 'CB3', 'CB4']"
    ]
@@ -72,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,24 +160,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask  = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mesh1.nc')\n",
-    "tmask = np.array(mask.variables['tmask'])[0,:,imin:imax,jmin:jmax]\n",
-    "\n",
-    "e3t        = np.array(mask.variables['e3t_0'])[0,:,imin:imax,jmin:jmax]\n",
+    "# ANHA12 grid:\n",
+    "mesh       = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mesh1.nc')\n",
+    "tmask      = np.array(mesh.variables['tmask'])[0,:,imin:imax,jmin:jmax]\n",
+    "e3t        = np.array(mesh.variables['e3t_0'])[0,:,imin:imax,jmin:jmax]\n",
     "e3t_masked = np.ma.masked_where((tmask[:,:,:] < 0.1), e3t)\n",
-    "hdept      = np.array(mask.variables['hdept'])[0,imin:imax,jmin:jmax]"
+    "hdept      = np.array(mesh.variables['hdept'])[0,imin:imax,jmin:jmax]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Mn model grid:\n",
     "ref   = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12-EXH006_y2015m01d05_gridT.nc',  'r')\n",
     "depth = np.array(ref.variables['deptht'])"
    ]
@@ -205,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,17 +265,10 @@
     "fig.text(0.13, 0.45, 'c)', fontsize=8, weight='bold')\n",
     "fig.text(0.55, 0.45, 'd)', fontsize=8, weight='bold')\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers/S1-spin-up.png', bbox_inches='tight', dpi=300)\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers/S1-spin-up.svg', bbox_inches='tight', dpi=300, \\\n",
-    "                    format='svg')"
+    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202206/S1-spin-up.jpg', bbox_inches='tight', dpi=300)\n",
+    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers-paper-202206/S1-spin-up.svg', bbox_inches='tight', dpi=300, \\\n",
+    "#                     format='svg')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
