River forcing files current

--- a/paper3/forcing/river-apply-concentrations-to-classification.ipynb
+++ b/paper3/forcing/river-apply-concentrations-to-classification.ipynb
@@ -31,23 +31,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rclass = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/paper3-forcing-files/river_class-202203.nc')\n",
+    "rclass = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/Pb-202207-forcing/river_class-202207.nc')\n",
     "river_class = rclass['rclass'].values"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "Apply trace metal concentrations to classification system:"
+    "#### Apply trace metal concentrations to classification system:"
    ]
   },
   {
@@ -134,7 +140,7 @@
     "         \"x\": np.zeros(1632),\n",
     "    })\n",
     "    \n",
-    "file_write.to_netcdf('/ocean/brogalla/GEOTRACES/data/paper3-forcing-files/river-forcing-Pb-base-20220322.nc')"
+    "file_write.to_netcdf('/ocean/brogalla/GEOTRACES/data/Pb-202207-forcing/river-forcing-Pb-base-20220713.nc')"
    ]
   },
   {
