--- a/paper3/forcing/river-classification.ipynb
+++ b/paper3/forcing/river-classification.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f61efc76898>"
+       "<matplotlib.legend.Legend at 0x7fb67bd5b8d0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
     "        \"x\": np.zeros(1632),\n",
     "    })\n",
     "    \n",
-    "file_write.to_netcdf('/ocean/brogalla/GEOTRACES/data/paper3-forcing-files/river_class-202203.nc')"
+    "file_write.to_netcdf('/ocean/brogalla/GEOTRACES/data/Pb-202207-forcing/river_class-202207.nc')"
    ]
   },
   {
