changed to year 2010

--- a/paper3/M1-sub-domain-map.ipynb
+++ b/paper3/M1-sub-domain-map.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "jsize = jmax-jmin\n",
     "\n",
     "# runoff period:\n",
-    "rf_year  = 2015\n",
+    "rf_year  = 2010\n",
     "rf_month = 8    # september \n",
     "\n",
     "# Resolution of grid cells to show in figure:\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
     "CBar.set_label('Ocean depth [m]', fontsize=5)\n",
     "CBar.ax.tick_params(axis='y', length=0, labelsize=5)\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_chapter/M1-model-domain.jpg', bbox_inches='tight', dpi=300)"
+    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_chapter/M1-model-domain.jpg', bbox_inches='tight', dpi=300)"
    ]
   },
   {
