Fixing the surface heating in mixed layer Pb boundary conditions

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,17 +120,32 @@
     "    dPb_BC  = np.interp(bdy_sal, end_sal, end_dPb)\n",
     "    \n",
     "    # Polar Mixed Layer:\n",
-    "    sal_PML   = [34.9, 35.1]\n",
-    "    dPb_PML   = [AO_Pb, PML_hot_Pb]\n",
+    "    sal_PML   = [34.6, 35.1]\n",
+    "    dPb_PML   = [AO_Pb, AOAW_Pb] # PML_hot_Pb]\n",
     "#     dPb_BC[:,:,grid:][(bdy_depth < 80) & (bdy_temp > 7.5)] = \\\n",
     "#             np.interp(bdy_depth[(bdy_depth < 80)  & (bdy_temp > 7.5)], \\\n",
     "#                                                            depth_PML, dPb_PML)\n",
-    "#     lsl = 60; lsr = 180; #(bdy_temp[0:20,:,lsl:lsr] > 2.0)\n",
+    "    lsl = 0; lsr = 180; #(bdy_temp[0:20,:,lsl:lsr] > 2.0)\n",
+    "    lsd = 26; # bottom depth\n",
     "#     lsl=0; lsr=-1;\n",
     "#     if mask: # mask summer solar heating influence:\n",
-    "#         dPb_BC[0:26,:,lsl:lsr][(bdy_temp[0:26,:,lsl:lsr] > 4.9) & (bdy_sal[0:26,:,lsl:lsr] > 34.95) & (bdy_sal[0:26,:,lsl:lsr] < 35.05)] = \\\n",
-    "#             np.interp(bdy_sal[0:26,:,lsl:lsr][(bdy_temp[0:26,:,lsl:lsr] > 4.9) & (bdy_sal[0:26,:,lsl:lsr] > 34.95) & (bdy_sal[0:26,:,lsl:lsr] < 35.05)], \\\n",
+    "#     dPb_BC[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.0)] = \\\n",
+    "#             np.interp(bdy_sal[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.0)], \\\n",
     "#                       sal_PML, dPb_PML)\n",
+    "    dPb_BC[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.0) | \\\n",
+    "                            (bdy_sal[0:lsd,:,lsl:lsr] > 34.80) & (bdy_sal[0:lsd,:,lsl:lsr] < 35.15)] = \\\n",
+    "            np.interp(bdy_sal[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.0) | \\\n",
+    "                                               (bdy_sal[0:lsd,:,lsl:lsr] > 34.80) & (bdy_sal[0:lsd,:,lsl:lsr] < 35.15)], \\\n",
+    "                      sal_PML, dPb_PML)\n",
+    "#     lsl = 80; lsr = 160; lsd = 30;\n",
+    "#     dPb_BC[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.5)] = \\\n",
+    "#             np.interp(bdy_sal[0:lsd,:,lsl:lsr][(bdy_temp[0:lsd,:,lsl:lsr] > 1.5)], \\\n",
+    "#                       sal_PML, [AO_Pb, 20e-12])\n",
+    "\n",
+    "    lsl = 40; lsr = -1; lsd = 26;\n",
+    "    dPb_BC[0:lsd,:,lsl:lsr][(bdy_sal[0:lsd,:,lsl:lsr] < 35.18) & (bdy_sal[0:lsd,:,lsl:lsr] > 34.82)] = \\\n",
+    "            np.interp(bdy_sal[0:lsd,:,lsl:lsr][(bdy_sal[0:lsd,:,lsl:lsr] < 35.18) & (bdy_sal[0:lsd,:,lsl:lsr] > 34.82)], \\\n",
+    "                      sal_PML, [AO_Pb, 20e-12])\n",
     "    \n",
     "    # Baffin Bay deep water:\n",
     "    end_temp_BBDW = [BBDW_temp, AW_temp]\n",
@@ -151,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
